# openup-day

./: Dockerfile  README.MD  docker-compose.yml  pyproject.toml
app/: consumers.py  urls.py  views.py
chat/: asgi.py  settings.py  urls.py
templates/app/: chat.html  login.html
