[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["hjklvfr <hjklvfr@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
channels = "^3.0.4"
channels-redis = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
